# openwrt-mtk

./: dev_info.db
package/iotx-sdk-c/: make.settings  makefile
package/iotx-sdk-c/sample/deviceshadow/: deviceshadow.c  makefile
package/iotx-sdk-c/sample/mqtt/: makefile  mqtt.c
package/iotx-sdk-c/src/: makefile
package/iotx-sdk-c/src/auth/: aliyun_iot_auth.c  aliyun_iot_auth.h
package/iotx-sdk-c/src/mqtt/: aliyun_iot_mqtt_client.h
package/iotx-sdk-c/src/shadow/: aliyun_iot_shadow.c  aliyun_iot_shadow_update.c
package/iotx-sdk-c/src/utility/: aliyun_iot_common_base64.c  aliyun_iot_common_base64.h  aliyun_iot_common_error.h  aliyun_iot_common_hmac.c  aliyun_iot_common_hmac.h  aliyun_iot_common_list.c  (+10 more)
package/usr_app/: Makefile
package/usr_app/src/: Makefile  cjson.c  cjson.h  dev_info.db  helloworld  helloworld.c  log.txt  log1.txt  m1_protocol.c  m1_protocol.h  poll_client  poll_client.c  poll_server.c  poll_socket.h  sqlite.c  sqlite.h  struct_test.c  struct_test.h  test.db  thread.c  thread.h
package/usr_app/src/bestomgw/src/mina/: CMakeLists.txt  Makefile
package/usr_app/src/bestomgw/src/mina/src/core/: CMakeLists.txt  iobuffer.c  iobuffer.h  iosession.c  iosession.h  minac.h  session_config.c  session_config.h  socket_acceptor.c  socket_acceptor.h  socket_connector.c  socket_connector.h  socket_handler.c  socket_handler.h
package/usr_app/src/bestomgw/src/mina/src/parse/: app_parse.c  app_parse.h
package/usr_app/src/bestomgw/src/mina/src/test/: common.c  common.h  main.c  test_acceptor.c  test_acceptor.h  test_connector.c  test_connector.h
(+193 files in other folders)
