AUX_SOURCE_DIRECTORY(. SRC_LIST)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
ADD_LIBRARY(minac ${SRC_LIST})
#ADD_LIBRARY(minac_static STATIC ${SRC_LIST})

#SET_TARGET_PROPERTIES(minac_static PROPERTIES OUTPUT_NAME "minac")
#SET_TARGET_PROPERTIES(minac PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(minac_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(minac PROPERTIES VERSION 1.0 SOVERSION 1)

INSTALL(TARGETS minac LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES minac.h iobuffer.h DESTINATION include)